--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ h1 {
 .start,
 .next {
   cursor: pointer;
-  background: linear-gradient(180deg, #ffcc91, #fff);
+  background: linear-gradient(180deg, #ffcc91, rgb(9, 150, 150));
   border: 2px solid #d38558;
   box-shadow: 0px 5px 10px rgba((0), 0, 0, 0.25);
   border-radius: 10px;
